# incus-client-rs

./: Cargo.toml  README.md  extract_openapi.py  my-subset.yaml
incus-client/: CONTRIBUTING.md  Cargo.toml  README.md  README_API.md
incus-client-tests/: Cargo.toml
incus-client-tests/tests/: test_instances.rs
incus-client/docs/: AccessEntry.md  BackupTarget.md  Image.md  ImageAlias.md  ImageGet200Response.md  ImageMetadata.md  ImageMetadataTemplate.md  ImagePut.md  ImageSource.md  ImagesApi.md  ImagesGet200Response.md  Instance.md  InstanceAccess200Response.md  InstanceBackup.md  InstanceBackupGet200Response.md  InstanceBackupPost.md  InstanceBackupsGet200Response.md  InstanceBackupsGetRecursion1200Response.md  InstanceBackupsPost.md  InstanceConsoleGet404Response.md  InstanceConsolePost.md  InstanceDebugRepairPost.md  InstanceExecOutputsGet200Response.md  InstanceExecPost.md  InstanceFull.md  InstanceGet200Response.md  InstanceGetRecursion1200Response.md  InstanceLogsGet200Response.md  InstanceMetadataGet200Response.md  InstanceMetadataPut412Response.md  InstancePatch200Response.md  InstancePost.md  InstancePostTarget.md  InstancePut.md  InstanceRebuildPost.md  InstanceSnapshot.md  InstanceSnapshotGet200Response.md  InstanceSnapshotPost.md  InstanceSnapshotPut.md  InstanceSnapshotsGet200Response.md  (+34 more)
incus-client/src/: lib.rs  unix_socket.rs
incus-client/src/apis/: configuration.rs  images_api.rs  instances_api.rs  mod.rs  operations_api.rs  server_api.rs
incus-client/src/models/: access_entry.rs  backup_target.rs  image.rs  image_alias.rs  image_metadata.rs  (+66 more)
