[package]
name = "incus-client-tests"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
incus-client = { path = "../incus-client" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
chrono = { version = "^0.4",  features = ["serde"] }
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }

[dev-dependencies]
tokio = { version = "^1.52", features = ["macros"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
